--- a/MVC/CIPlatform/CIPlatform/Views/Home/Registration.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Registration.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CIPlatform.Entities.Models.RegistrationModel
 
-@using CIPlatform.Models
+@*@using CIPlatform.Models*@
 
 
 <!DOCTYPE html>
@@ -16,199 +16,168 @@
     <!-- Bootstrap links -->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Registration</title>
 </head>
 
 <body>
-    <!-- Section: Split screen -->
-    <section class="">
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-8 ">
+    <div class="row" style="font-family: 'Noto Sans', sans-serif">
+
+        <div class="col-lg-8 ">
 
 
-                    <!-- Carousel -->
+            <!-- Carousel -->
 
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+                        <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
+
+                        <div class="carousel-caption d-md-block">
+                            <h1>
+                                Sed ut perspiciatis unde omnis <br>
+                                iste natus voluptatem.
+                            </h1>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Integer volutpat ante nec mauris dictum consequat. Duis lacus sapien,
+                                scelerisque egestas consectetur at, malesuada sit amet tortor.
+                                Aliquam erat volutpat. Morbi in purus id lorem ornare suscipit vel
+                                et nunc. Proin tincidunt justo sem, sit amet pretium dui semper vitae.
+                                Curabitur mi urna, congue non eros a, posuere porttitor lectus.
+                                Proin tincidunt in ipsum ac lacinia.
+                            </p>
                         </div>
-                        <div class="carousel-inner">
-
-                            <div class="carousel-item active">
-                                <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
-
-                                <div class="carousel-caption d-md-block">
-                                    <h1>Sed ut perspiciatis unde omnis
-                                        iste natus voluptatem.
-                                    </h1>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Integer volutpat ante nec mauris dictum consequat. Duis lacus sapien,
-                                        scelerisque egestas consectetur at, malesuada sit amet tortor.
-                                        Aliquam erat volutpat. Morbi in purus id lorem ornare suscipit vel
-                                        et nunc. Proin tincidunt justo sem, sit amet pretium dui semper vitae.
-                                        Curabitur mi urna, congue non eros a, posuere porttitor lectus.
-                                        Proin tincidunt in ipsum ac lacinia. </p>
-                                </div>
-                            </div>
-
-                            <div class="carousel-item">
-                                <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
-                            </div>
-
-                            <div class="carousel-item">
-                                <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
-                            </div>
-
-                        </div>
-
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden"></span>
-                        </button>
-
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden"></span>
-                        </button>
                     </div>
 
+                    <div class="carousel-item">
+                        <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
+                    </div>
 
                 </div>
 
-                <div class="col-lg-4">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden"></span>
+                </button>
 
-                    @using (Html.BeginForm("Registration","Home", FormMethod.Post)){
-
-                        if (ViewBag.Status != null)
-                        {
-                            if (ViewBag.Status == 1)
-                            {
-                                <br />
-                                
-                                <span class="alert alert-success">Registered Successfully</span>
-                                <br />
-                            }
-                            else if (ViewBag.Status == 0)
-                            {
-                                <br />
-                               
-                                <span class="alert alert-danger">Error while registering</span>
-                                <br />
-                            }
-                        }
-
-                    <div class="login-form">
-
-
-                        <label class="lbl-fname">First Name</label>
-                        <br>
-
-                            @Html.TextBoxFor(u => u.FirstName, new {@type="text",@class = "txt-inp", @placeholder=" Enter your first name" } )
-                        @*<input type="text" class="txt-inp" placeholder=" Enter your first name">*@
-
-                        <br>
-
-                        <label class="lbl-lname">Last Name</label>
-                        <br>
-
-                            @Html.TextBoxFor(u => u.LastName, new {@type="text",@class = "txt-inp", @placeholder=" Enter your last name"})
-                        @*<input type="text" class="txt-inp" placeholder=" Enter your last name">*@
-
-                        <br>
-                        <label class="lbl-ph">Phone Number</label>
-                        <br>
-                            @Html.TextBoxFor(u => u.PhoneNumber, new {@type="tel",@pattern="[0-9]{10}" ,@class = "txt-inp", @placeholder=" Enter your phone number"})
-                        @*<input type="number" class="txt-inp" placeholder=" Enter your phone number">*@
-                        @*<span asp-validation-for="PhoneNumber" class="text-danger" style="font-size:12px;"></span>*@
-                        <br>
-
-                        <label class="lbl-email">Email Address</label>
-                        <br>
-                        @Html.TextBoxFor(u => u.Email, new {@type="email",@class = "txt-inp", @placeholder=" Enter your email address"})
-                        @*<input type="text" class="txt-inp" placeholder=" Enter your email address">*@
-
-                        <br>
-                        <label class="lbl-pass">Password</label>
-                        <br>
-                            @Html.TextBoxFor(u => u.Password, new {@id="pass",@type="password",@class = "txt-inp", @placeholder=" Enter your password"})
-                        @*<input type="password" class="txt-inp" placeholder=" Enter your password">*@
-                       
-
-                        <label class="lbl-pass">Confirm Password</label>
-                        <br>
-                            @Html.TextBoxFor(u => u.Password, new {@id="conpass",@type="password",@class = "txt-inp", @placeholder=" Enter your confirm password"})
-                        @*<input type="password" class="txt-inp" placeholder=" Enter your confirm password">*@
-
-
-                        <br>
-
-                       @* <label class="lbl-lname">City</label>
-                        <br>
-
-                        @Html.TextBoxFor(u => u.CityId, new {@class = "txt-inp", @placeholder=" Enter your city id"})
-
-*@
-                        <br>
-
-                       @* <label class="lbl-lname">Country</label>
-                        <br>
-
-                        @Html.TextBoxFor(u => u.CountryId, new {@class = "txt-inp", @placeholder=" Enter your country id"})
-*@
-
-                       
-                        <br>
-                        <button type="submit" class="btn-reg" onclick="return Validate()">Register</button>
-                        <br> <br>
-
-                      
-                        <a asp-controller="Home"  asp-action="LostPass" class="lbl-losspass">Lost your password?</a>
-                        <br>
-                        <span>
-                            <label class="lbl-ar">Already registered?</label>
-
-                            <a asp-controller="Home"  asp-action="Index">Login</a>
-                        </span>
-
-                        <br><br>
-                        <label class="lbl-privacy">Privacy Policy</label>
-
-                    </div>
-                    }
-
-                </div>
-
-
-
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden"></span>
+                </button>
             </div>
-        </div>
 
-    </section>
-    <!-- Section: Split screen -->
+
+        </div>
+        <div class="col-xl-4 ">
+            @using (Html.BeginForm("Registration", "Home", FormMethod.Post))
+            {
+                if (ViewBag.Status != null)
+                {
+                    if (ViewBag.Status == 1)
+                    {
+                        <br />
+                        <span class="alert alert-success">Registered Successfully</span>
+
+                        <br />
+                    }
+                    else if (ViewBag.Status == 0)
+                    {
+                        <br />
+                        <span class="alert alert-danger">Email Address already exists</span>
+                        <br />
+                    }
+                }
+                <form class="mailpass3" method="post">
+                    <div class="mail">
+
+
+                        <div class="pass">
+                            <div>
+
+                                <label asp-for="FirstName" class="form-label">First name</label>
+                                <input asp-for="FirstName" type="text" placeholder="Enter your First Name" class="form-control" class="form-control1">
+                                <span asp-validation-for="FirstName" class="text-danger" style="font-size:12px;"></span>
+
+
+                            </div>
+                            <div>
+                                <label asp-for="LastName" class="form-label">Last name</label>
+                                <input asp-for="LastName" type="text" placeholder="Enter your Last Name" class="form-control">
+                                <span asp-validation-for="LastName" class="text-danger" style="font-size:12px;"></span>
+                            </div>
+                            <div>
+                                <label asp-for="PhoneNumber" class="form-label">PhoneNumber</label>
+                                <input asp-for="PhoneNumber" type="tel" class="form-control" placeholder="Enter your Phone Number">
+                                <span asp-validation-for="PhoneNumber" class="text-danger" style="font-size:12px;"></span>
+                            </div>
+                            <div>
+                                <label asp-for="Email" class="form-label">Email address</label>
+                                <input asp-for="Email" type="email" class="form-control" placeholder="Enter your Email address">
+                                <span asp-validation-for="Email" class="text-danger" style="font-size:12px;"></span>
+                            </div>
+                            <div>
+                                <label asp-for="Password" class="form-label">Password</label>
+                                <input asp-for="Password" id="pass" type="password" class="form-control" placeholder="Enter your Password">
+                                <span asp-validation-for="Password" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+
+                            </div>
+
+                            <label asp-for="ConfirmPassword" class="form-label">Confirm New Password</label>
+                            <input asp-for="ConfirmPassword" id="confirmpass" type="password" class="form-control" placeholder="Enter your Confirm Password">
+                            <span asp-validation-for="ConfirmPassword" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+                        </div>
+                    </div>
+                    <button type="submit" class="btn-reg" onclick="return Validate()">Register</button>
+                    <br>
+                    <br>
+
+                </form>
+                <div class="lost1">
+
+                    <a asp-controller="Home" asp-action="LostPass" style="color:black">Lost your password?</a> <br>
+                    <span class="acc1">Already registered? <a asp-controller="Home" asp-action="Index" style="color:#2B64B1">Login</a></span><br>
+
+                </div>
+            }
+        </div>
+    </div>
+
+    <div class="privacy2">
+        <a href="">Privacy Policy</a>
+    </div>
+    </div>
     <script>
 
         function Validate() {
-        var password = document.getElementById("pass").value;
-        var confirmPassword = document.getElementById("conpass").value;
-        if (password != confirmPassword) {
-            alert("Passwords do not match.");
-            return false;
-        }
-        return true;
-    }
-    </script>
+            var password = document.getElementById("pass").value;
+            var confirmPassword = document.getElementById("confirmpass").value;
+            if (password != confirmPassword) {
+                alert("Password do not match");
+                return false;
+            }
+            return true;
+        }</script>
 </body>
 
 </html>
