Change Password for User Profile

--- a/MVC/CIPlatform/CIPlatform/Views/Home/ResetPass.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/ResetPass.cshtml
@@ -113,7 +113,7 @@
 
                             <div>
                                 <label asp-for="Password" class="form-label">Password</label>
-                                <input asp-for="Password" id="pass" type="password" class="form-control" placeholder="Enter your Password">
+                            <input asp-for="Password" name="pass1" id="pass" type="password" class="form-control" placeholder="Enter your Password">
                                 <span asp-validation-for="Password" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
                             </div>
                             <br />
