--- a/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
@@ -5,6 +5,9 @@ For more information on enabling MVC for empty projects, visit https://go.micros
 }
 @using CIPlatform.Entities.Models
 
+@model ChangePassUserModel
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -123,7 +126,72 @@ For more information on enabling MVC for empty projects, visit https://go.micros
                         <img class="img-left" src="~/NewFolder/user-img.png" />
                         <p style="text-align:center">Name</p>
 
-                        <a asp-action="#" style="text-align:center; justify-content:center;">Change Password</a>
+                        @*<a asp-action="_ChangePass" asp-controller="Home" style="text-align:center; justify-content:center;">
+                            Change Password
+                            
+
+                        </a>*@
+
+
+                        <!-- Button trigger modal -->
+
+                        
+
+                        <button type="button" class="btn btn-primary change-link" data-toggle="modal" data-target="#exampleModalCenter">
+                            Change Password
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLongTitle">Change Password</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                      
+                                                
+                                        
+
+                                        <form id="change-form" asp-action="ChangeUserPass" asp-controller="Home" method="post">
+                                        <div>
+                                           
+                                                    <input asp-for="OldPassword" id="oldpass" name="oldpass" type="password" class="form-control" placeholder="Enter old password">
+                                            <span asp-validation-for="OldPassword" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                                        </div>
+                                        <br />
+                                         <div>
+                                            
+
+                                                    <input asp-for="NewPassword" name="newpass" id="newpass" type="password" class="form-control" placeholder="Enter new password">
+                                                <span asp-validation-for="NewPassword" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                                                   
+                                            </div>
+                                        <br />
+                                        <div>
+
+                                                    <input asp-for="ConfirmPassword" name="confirmpass" id="confirmpass" type="password" class="form-control" placeholder="Enter confirm password">
+                                            <span asp-validation-for="ConfirmPassword" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+
+                                        </div>
+                                        </form>
+                                         
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary cancel-btn" data-dismiss="modal">Cancel</button>
+                                        @*<button type="button" class="btn btn-primary changepass-btn">Change Password</button>*@
+                                        <a class="btn btn-primary changepass-btn" onclick="changeuserpass()" style="text-align:center; justify-content:center;">
+                                            Change Password
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
