--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/editprofile.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/editprofile.css
@@ -32,3 +32,29 @@
     color: #F88634;
     margin-left: 78%;
 }
+
+.cancel-btn {
+    width: 119px;
+    height: 48px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 2px solid #757575;
+    border-radius: 24px;
+    color: #757575;
+}
+
+.changepass-btn {
+    top: 441px;
+    left: 1037px;
+    width: 189px;
+    height: 48px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 2px solid #F88634;
+    border-radius: 24px;
+    color: #F88634;
+}
+.change-link
+{
+    /*border:none;
+    background:none;
+    text-decoration:none;*/
+}
