Working on Add skills for user profile

--- a/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
@@ -41,6 +41,7 @@
 
     <link rel="stylesheet" href="~/css/platformlandingpage.css">
     <link rel="stylesheet" href="~/css/storylisting.css">
+    
 
 
     <title>Platform Landing Page</title>
@@ -417,7 +418,7 @@
     <!-- Grid View -->
     <div class="grid-view" id="grdp">
 
-        <div class="container grid-container ">
+        <div class="container-fluid grid-container" style="margin-left:8%; width:80%; margin-top:-3%;">
             <div id="filter_products-grid">
         <partial name="_Grid" />
     </div>
