--- a/MVC/CIPlatform/CIPlatform/Views/Shared/_Grid.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Shared/_Grid.cshtml
@@ -29,7 +29,7 @@
 
 }
 
-<div class="row">
+@*<div class="row">
     @foreach (var item in ViewBag.outputsf)
     {
 
@@ -228,12 +228,6 @@
 
 
 
-                @*<a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@item.MissionId">
-            <button type="submit" class="apply-btn">
-
-            Apply <img src="~/NewFolder/right-arrow.png">
-            </button>
-            </a>*@
 
 
                 @{
@@ -298,7 +292,339 @@
 
     }
 
+</div>*@
+
+
+
+
+@*------------------*@
+
+
+
+
+<div class="row">
+
+    @foreach (var item in ViewBag.outputsf)
+    {
+
+        <div class="col-12 col-md-6 col-lg-4" style="margin-top: 5%;">
+            <div class="card">
+                <img src="~/NewFolder/imgenv.png" class="card-img-top" alt="...">
+                <button class="missions">@item.Theme.Title</button>
+                <div class="card-body">
+
+                    <h4 class="card-title">@item.Title</h4>
+
+                    @{
+
+
+                        if (@ViewBag.favlist.Count == 0)
+                        {
+                            <i onclick="likeMission(@item.MissionId)" class="far fa-heart"></i>
+
+                        }
+
+                        else
+                        {
+
+
+
+                            var v = ViewBag.favlist;
+
+                            for (var i = 0; i < v.Count; i++)
+                            {
+
+
+                                if (@ViewBag.favlist[i].MissionId == item.MissionId && @ViewBag.favlist[i].UserId == ViewBag.ids)
+                                {
+                                    <i onclick="likeMission(@item.MissionId)" style="color:red" class="fas fa-heart"></i>
+                                    break;
+
+                                }
+                                else
+
+                                {
+
+
+                                    if (i == v.Count - 1)
+                                    {
+                                        <i onclick="likeMission(@item.MissionId)" class="far fa-heart"></i>
+
+                                    }
+
+                                }
+
+                            }
+
+                        }
+
+
+
+                    }
+
+
+
+
+
+
+
+
+
+                    <p class="card-text">@item.ShortDescription</p>
+
+                    <div class="row">
+
+                        <div class="col-6">
+                            <span class="card-text">@item.OrganizationName</span>
+
+                        </div>
+
+                        <div class="col-6" style="margin-left: -12%;">
+
+                          @*  <div class="rating">
+                                <span class="rating__result"></span>
+                                <i class="rating__star far fa-star"></i>
+                                <i class="rating__star far fa-star"></i>
+                                <i class="rating__star far fa-star"></i>
+                                <i class="rating__star far fa-star"></i>
+                                <i class="rating__star far fa-star"></i>
+                            </div>*@
+
+
+                            <div id="rating" class="col-6 d-flex">
+
+                                @{
+
+
+
+                                    if (@ViewBag.Ratingdata.Count == 0)
+                                    {
+
+                                        <div id="rating">
+                                            <i class="rating__star far fa-star star" data-value="1" data-missionid="@item.MissionId"></i>
+                                            <i class="rating__star far fa-star star" data-value="2" data-missionid="@item.MissionId"></i>
+                                            <i class="rating__star far fa-star star" data-value="3" data-missionid="@item.MissionId"></i>
+                                            <i class="rating__star far fa-star star" data-value="4" data-missionid="@item.MissionId"></i>
+                                            <i class="rating__star far fa-star star" data-value="5" data-missionid="@item.MissionId"></i>
+                                        </div>
+
+
+                                    }
+
+
+                                    else
+                                    {
+                                        int sum = 0;
+                                        int i = 0;
+                                        int count = 0;
+                                        var answ = 0;
+                                        for (i = 0; i < @ViewBag.Ratingdata.Count; i++)
+                                        {
+
+                                            if (@ViewBag.Ratingdata[i].MissionId == @item.MissionId)
+                                            {
+                                                int b = Convert.ToInt32(ViewBag.Ratingdata[i].Rating);
+                                                sum = sum + b;
+                                                count++;
+                                                answ = sum / count;
+
+                                            }
+
+
+
+                                        }
+
+                                        for (int j = 1; j <= 5; j++)
+                                        {
+
+                                            if (j <= answ)
+                                            {
+                                                <div id="rating">
+                                                    <i class="rating__star fas fa-star star" data-value="@j" data-missionid="@item.MissionId"></i>
+                                                </div>
+
+                                            }
+                                            else
+                                            {
+                                                <div id="rating">
+                                                    <i class="rating__star far fa-star star" data-value="@j" data-missionid="@item.MissionId"></i>
+                                                </div>
+
+                                            }
+
+                                        }
+
+
+                                    }
+
+                                }
+
+                            </div>
+
+
+
+                        </div>
+
+                    </div>
+
+
+                    <br><br>
+
+
+                    <div class="row">
+
+                        <div class="col-12">
+
+                            <div class="card-line">
+                                <button class="btn-date">From  @item.StartDate.ToShortDateString() until @item.EndDate.ToShortDateString()</button>
+                            </div>
+                        </div>
+
+                    </div>
+                    <br>
+                    <div class="row">
+
+                        <div class="col-6 already-vol-main" style="display: flex;">
+
+                            <img src="~/NewFolder/Seats-left.png" alt=""
+                             style="height: 45%; width: 18%;">
+                            <div class="already-vol">
+                                <p style="color:grey; margin-left:15%;">@item.Availability</p>
+                                <p style="color:grey; margin-left:15%; width: 100%; margin-top:-15%;">Seats Left</p>
+                               
+                            </div>
+
+
+                        </div>
+
+                        <div class="col-6 already-vol-main" style="display: flex;">
+                            @{
+                                var t = 0;
+                                var length = ViewBag.progressData.Count;
+                                for ( t = 0; t < length; t++)
+                                {
+                                    if (ViewBag.progressData[t].MissionId == item.MissionId)
+                                    {
+
+
+                                       
+                                    //<img src="~/NewFolder/mission.png" alt="" class="mission-img">
+                                    <div class="hssh">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: @(TempData["ProgressBarValue"])%;" aria-valuenow="@TempData["ProgressBarValue"]" aria-valuemin="0" aria-valuemax="100"></div>
+
+                                        </div>
+
+                                    </div>
+                                }
+                                
+                                else
+                                {
+                                    if (t == length - 1)
+                                        {
+                                    //<img class="mission-img" src="~/NewFolder/deadline.png">
+                                    <div class="hssh">
+
+                                        <p class="seatno">@item.EndDate.ToShortDateString()</p>
+                                        <p class="seat">Deadline</p>
+                                    </div>
+                                        }
+                                }
+                            }
+
+                            }
+
+                        </div>
+                    </div>
+                    <hr class="line-hr">
+                    <br>
+                    <div class="row">
+                        <div class="col-12" style="text-align: center;">
+                            @*<button class="apply-btn" style="margin-left: 0%;">
+                                Apply
+
+                                <img src="~/NewFolder/right-arrow.png" alt="" class="right-arrow">
+
+                            </button>*@
+
+
+                            @{
+
+
+
+
+
+                                var lengths = ViewBag.missionapplication.Count;
+                                for (int k = 0; k < lengths; k++)
+                                {
+                                    if (ViewBag.Missionapplication[k].MissionId == item.MissionId)
+                                    {
+
+                                        <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@item.MissionId">
+                                            <button type="submit" class="apply-btn" style="margin-left:1%; margin-top:5%;">
+
+                                                View Details <img src="~/NewFolder/right-arrow.png">
+                                            </button>
+                                        </a>
+                                        break;
+                                    }
+                                    else
+                                    {
+                                        if (k == lengths - 1)
+                                        {
+                                            var a = item.EndDate;
+                                            var res = DateTime.Compare(ViewBag.currentDate, item.EndDate);
+                                            if (res == 1)
+                                            {
+                                                <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@item.MissionId">
+                                                    <button type="submit" class="apply-btn" style="margin-left:1%;  margin-top:5%;">
+
+                                                        View Details <img src="~/NewFolder/right-arrow.png">
+                                                    </button>
+                                                </a>
+                                            }
+                                            else
+                                            {
+                                                <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@item.MissionId">
+                                                    <button type="submit" class="apply-btn" style="margin-left:1%;  margin-top:5%;">
+
+                                                        Apply  <img src="~/NewFolder/right-arrow.png">
+                                                    </button>
+                                                </a>
+                                            }
+                                        }
+
+
+                                    }
+
+                                }
+
+
+
+                            }
+                        </div>
+                    </div>
+
+
+
+
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+    }
 </div>
+                            </div>
+
+
+
+
+
                      </div>
 
 
