--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/editprofile.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/editprofile.css
@@ -58,3 +58,15 @@
     background:none;
     text-decoration:none;*/
 }
+
+.left-box
+{
+    border:solid 1px #808080;
+
+    
+}
+
+.right-box {
+    border: solid 1px #808080;
+    
+}
